--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./styles.css">
+  <script src="./index.js"></script>
   <title>Needs A Title *****</title>
 </head>
 <body>
 
-  <h2>Update CSS Variables with <span class='hl'>JS</span></h2>
+  <h2>Update CSS Variables with <span>JS</span></h2>
 
   <div class="controls">
     <label for="spacing">Spacing:</label>
@@ -22,25 +24,6 @@
   </div>
 
   <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
-
-  <style>
-    body {
-      text-align: center;
-      background: #193549;
-      color: white;
-      font-family: 'helvetica neue', sans-serif;
-      font-weight: 100;
-      font-size: 50px;
-    }
-
-    .controls {
-      margin-bottom: 50px;
-    }
-
-    input {
-      width: 100px;
-    }
-  </style>
 
 </body>
 </html>
