--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <input id="base" type="color" name="base" value="#ffc600">
   </div>
 
-  <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
+  <img src="https://picsum.photos/800/500/">
 
   
   <script src="./index.js"></script>
